// Code generated by furo-proto-gen. DO NOT EDIT.
syntax = "proto3";
package descriptor;
option cc_enable_arenas = true;
option go_package = "github.com/eclipse/eclipsefuro/furo/pkg/descriptor;descriptorpb";
option java_multiple_files = true;
option java_outer_classname = "FuroDescriptorProto";
option java_package = "pro.furo.descriptor";
option objc_class_prefix = "FPB";

import "google/protobuf/any.proto";


// Defines a queryparam field (for rpc type)
message Queryparam {  

    // constraints for a field, like min{}, max{}, step{}. Not used at the moment
    map<string,descriptor.FieldConstraint> constraints = 4;

    // the field description
    string description = 1;

    // meta information for the client, like label, default, repeated, options...
    descriptor.FieldMeta meta = 3;

    // the field type, https://developers.google.com/protocol-buffers/docs/proto3#scalar
    string type = 2;
}

// Defines a field in the furo spec
message Field {  

    // the field type, https://developers.google.com/protocol-buffers/docs/proto3#scalar
    string type = 2;

    // the field description
    string description = 1;

    // information for the proto generator, like number, type
    descriptor.Fieldproto __proto = 6;

    
    descriptor.Uiextension __ui = 7;

    // meta information for the client, like label, default, repeated, options...
    descriptor.FieldMeta meta = 3;

    // constraints for a field, like min{}, max{}, step{}
    map<string,descriptor.FieldConstraint> constraints = 4;

    // Custom extension
    map<string,google.protobuf.Any> extensions = 5;
}

// a single fieldconstraint
message FieldConstraint {  

    // the constraint value as string, even it is a number
    string is = 1;

    // The message to display on constraint violation
    string message = 2;
}

// Metas for a field
message FieldMeta {  

    // The default value as JSON string, this must match with the data structure of your type
    string default = 3;

    // Informative text which can be displayed on the ui
    string placeholder = 8;

    // A hint
    string hint = 2;

    // Informative text which can be displayed on the ui
    string label = 1;

    // Fieldoptions
    descriptor.Fieldoption options = 6;

    // Marks the field as readonly. Used for validations.
    bool readonly = 4;

    // repeated
    bool repeated = 5;

    // Put in type specific metas for your fields here
    google.protobuf.Any typespecific = 7;
}

// Options like flags and list
message Fieldoption {  

    // Add flags for your field. This can be something like "searchable". 
// //The flags can be used by generators, ui components,...
// 
    repeated string flags = 2;

    // a list with options, use descriptor.Optionitem or your own
    repeated google.protobuf.Any list = 1;
}

// Proto options for a field
message Fieldproto {  

    // The field numbers are used to identify your fields in the message binary format, and should not be changed once your message type is in use.
    int32 number = 2;

    // Assign field to a protobuf oneof group.
    string oneof = 3;
}

// Lifecycle information for a type or a service
message Lifecycle {  

    // Is this version deprecated
    bool deprecated = 1;

    // Inform about the replacement here, if you have one
    string info = 2;
}

// Items for fieldoption.list
message Optionitem {  

    // Id
    string id = 1;

    // String representation
    string display_name = 2;

    // is the item selected
    bool selected = 3;
}

// Defines a rpc for a service
message Rpc {  

    // the service description
    string description = 1;

    // Request and response types for the service
    descriptor.Servicereqres data = 3;

    // This data is needed for...
    descriptor.Servicedeeplink deeplink = 5;

    // Query params, it is recomended to use string types
    map<string,descriptor.Queryparam> query = 4;

    // RPC name https://developers.google.com/protocol-buffers/docs/proto3#services
    string rpc_name = 2;

    // Custom extension
    map<string,google.protobuf.Any> extensions = 6;
}

// Defines a service
message Service {  

    // Describe the rpcs or so
    string name = 1;

    // The version number, use semver
    string version = 3;

    // Describe the rpcs or so
    string description = 2;

    // Service lifecycle information
    descriptor.Lifecycle lifecycle = 4;

    // information for the proto generator, should be removed for the client spec
    descriptor.Typeproto __proto = 5;

    // RPCs for the service
    map<string,descriptor.Rpc> services = 6;

    // Custom extension
    map<string,google.protobuf.Any> extensions = 7;
}

// URL information for the service
message Servicedeeplink {  

    // Describe the query params
    string description = 1;

    // The link pattern, like /api/xxx/{qp}/yyy
    string href = 4;

    // method of curl
    string method = 3;

    // the relationship
    string rel = 2;
}

// Repuest and response types for services, used in service.type
message Servicereqres {  

    // Define the request type, leave this field empty if not needed
    string request = 1;

    // Define the response type, leave this field empty if not needed
    string response = 2;

    // Define the body field in request the type
// The name of the request field whose value is mapped to the HTTP request
// body, or `*` for mapping all request fields not captured by the path
// pattern to the HTTP body, or omitted for not having any HTTP request body.
// NOTE: the referred field must be present at the top-level of the request
// message type.
// 
    string bodyfield = 3;
}

// Defines a type in the furo spec
message Type {  

    // Name of the type
    string name = 1;

    // the type 
    string type = 2;

    // the type description
    string description = 3;

    // Type lifecycle information, setting deprecated to true will log a warning when running furo
    descriptor.Lifecycle lifecycle = 7;

    // information for the proto generator, should be removed for the client spec
    descriptor.Typeproto __proto = 4;

    // fields of a type
    map<string,descriptor.Field> fields = 5;

    // Custom extension
    map<string,google.protobuf.Any> extensions = 6;
}

// Main proto for a type
message Typeproto {  

    // the package this type belogs to
    string package = 1;

    // the target proto file for this type
    string targetfile = 3;

    // needed imports like [ "spec/descriptor.proto", "google/protobuf/empty.proto" ]
    repeated string imports = 2;

    // Proto options Todo: find a solution for boolean options
    map<string,string> options = 4;
}

// ui hints for a field
message Uiextension {  

    // component hint for ui-builder
    string component = 1;

    // UI element flags like full, double, hidden,...
    repeated string flags = 2;

    // Skip adding this field on ui init
    bool no_init = 3;

    // do not skip this field, even it is in the default skip list
    bool no_skip = 4;
}